--- a/data/config.json
+++ b/data/config.json
@@ -4,8 +4,7 @@
     "visState": {
       "layers": [
         {"config": {
-          "dataId": 
-          "data", 
+          "dataId": "data", 
           "color": [255, 153, 31], 
           "textLabel": [
             {"color": [255, 255, 255], 
@@ -61,8 +60,7 @@
          "id": "9bx0fs9"
         }, 
         {"config": 
-         {"dataId": 
-          "data", 
+         {"dataId": "data", 
           "color": [23, 184, 190], 
           "textLabel": [
             {
